2009-03-14 - Sean Huber (shuber@huberry.com)
  * Fix evaluate_block issues and Enumerable methods
  * Add Enumerable#detect
  * Update existing specs
  * Update doc/TODO
  * Add Object#inspect
  * Add Object#new_instance and global build_function_call methods
  * Add A and H classes
  * Make Enumerable abstract
  * Add Enumerable->default property
  * Add H#merge
  * Add H#update
  * Add Enumerable#clear
  * Add Enumerable#index
  * Add H#invert
  * Add Enumerable#replace
  * Add Enumerable#keys
  * Add Enumerable#values
  * Add Enumerable#values_at
  * Add Enumerable#shift
  * Add A#unshift
  * Rename Enumerable#includes to Enumerable#has_value
  * Add Enumerable#has_key
  * Enumerable#offsetGet accepts an optional default value
  * Add Object#alias_method support
  * Add Object#alias_method_chain support
  * Make alias_method and alias_method_chain global functions
  * Fix existing specs
  * Add A#compact
  * Add Enumerable#filter
  * Add Enumerable at => offsetGet alias
  * Add A#flatten
  * Remove EnumerableMethods#initialize
  * Update evaluate_block logic
  * Add A#concat
  * Add A#pack
  * Add A#pop
  * Add A#push
  * Add A#reverse
  * Add A#shift
  * Add A#unshift
  * Add A#unique
  * Add some method aliases
  * Add A#join

2009-03-13 - Sean Huber (shuber@huberry.com)
  * Add Enumerable (incomplete)
  * Update doc/TODO
  * Add Enumerable#partition
  * Add global evaluate_block($block, $arguments = array()) method
  * Refactor EnumerableMethods
  * Make EnumerableMethods class abstract
  * Add Enumerable#inject and refactor global evaluate_block
  * Add Enumerable#collect
  * Add Enumerable#sort_by

2009-03-12 - Sean Huber (shuber@huberry.com)
  * Update README
  * Move doc/ directory
  * Update doc/TODO
  * Remove "look into ReflectionMethod" from doc/TODO (wont work)
  * Add Object#is_a
  * Object#is_a now uses the instanceof operator
  * Add global extend method
  * Object#super must be called from inside of an instance method